# MiniChat

./: .gitignore  README.md
client/: CMakeLists.txt  client.c
client/include/: client.h  config.h
server/: CMakeLists.txt  server.c
server/include/: config.h  server.h
